# api-dinardi

./: .dockerignore  .env.example  Dockerfile  ListadeFunc15062026 Pesquisa Cultura.xlsx  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_usuarios.py  003_add_usuario_fk_to_senhas.py  004_unique_setor_nome.py  005_add_setor_fk_to_usuarios.py  006_add_cultura_formulario.py  007_add_data_contratacao_unidade.py  008_setor_id_nullable.py  009_add_sexo_to_usuarios.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py
app/dependencies/: database.py
app/domain/services/: admin_service.py  auth_service.py  questionnaire_service.py  senha_service.py  setor_service.py
app/models/: __init__.py  tables.py
app/routers/: admin.py  auth.py  questionnaires.py  senhas.py  setores.py
app/schemas/: admin.py  auth.py  common.py  questions.py  responses.py  senhas.py  setores.py
app/utils/: cpf.py  passwords.py  sanitize.py
docs/: migration-inventory.md
pesquisa_corporativa_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: entrypoint.sh  import_funcionarios.py  seed.py
