[project]
name = "pesquisa-corporativa-api"
version = "0.1.0"
description = "API FastAPI para migracao da pesquisa corporativa Vue/Supabase."
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "openpyxl==3.1.5",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
